[package]
name = "hr"
version = "0.0.3"
edition = "2021"
authors = ["haijima <k.haijima@gmail.com>"]
description = "Converts byte size into human readable format"
repository = "https://github.com/haijima/human-readable"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
