[package]
name = "hrdbl"
version = "0.0.4"
edition = "2021"
authors = ["haijima <k.haijima@gmail.com>"]
description = "Converts byte size into human readable format"
repository = "https://github.com/haijima/human-readable"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
clap-verbosity-flag = "2.1.0"
env_logger = "0.10.0"
log = "0.4.20"
